[FIX] Relatório configurado incorretamente

--- a/l10n_br_financial_payment_order/reports/py3o_darf.xml
+++ b/l10n_br_financial_payment_order/reports/py3o_darf.xml
@@ -9,7 +9,6 @@
             multi="1"
             name="l10n_br_financial_payment_order.py3o_darf"
             attachment="'DARF - ' + str(object.date_document) + '.pdf'"
-            attachment_use="0"
         />
         <!--attachment="(object.state in ('open','paid')) and ('INV'+(object.number or '').replace('/',''))"-->
 
@@ -24,6 +23,7 @@
             <field name="py3o_fusion_filetype" ref="report_py3o.py3o_fusion_filetype_pdf"/>
             <field name="py3o_template_fallback">data/guia_darf.odt</field>
             <field name="py3o_template_id" ref="py3o_template_darf"/>
+            <field name="attachment_use" eval="False"/>
         </record>
 
     </data>
