--- a/l10n_br_financial_payment_order/views/financial_move.xml
+++ b/l10n_br_financial_payment_order/views/financial_move.xml
@@ -19,5 +19,16 @@
             </field>
         </record>
 
+        <record model="ir.ui.view" id="l10n_br_financial_payment_order_financial_move_tree">
+            <field name="name">financial.move.debt.base.tree (in l10n_br_financial_payment_order)</field>
+            <field name="model">financial.move</field>
+            <field name="inherit_id" ref="financial.financial_move_debt_base_tree"/>
+            <field name="arch" type="xml">
+                <field name="display_name" position="replace">
+                    <field name="descricao" />
+                </field>
+            </field>
+        </record>
+
     </data>
 </openerp>
